subdir('alpha', components: [plugins_component, component('alpha')])
subdir('apetag', components: [plugins_component, component('apetag')])
subdir('audiofx', components: [plugins_component, component('audiofx')])
subdir('audioparsers', components: [plugins_component, component('audioparsers')])
subdir('auparse', components: [plugins_component, component('auparse')])
subdir('autodetect', components: [plugins_component, component('autodetect')])
subdir('avi', components: [plugins_component, component('avi')])
subdir('cutter', components: [plugins_component, component('cutter')])
subdir('debugutils', components: [plugins_component, component('debugutils')])
subdir('deinterlace', components: [plugins_component, component('deinterlace')])
subdir('dtmf', components: [plugins_component, component('dtmf')])
subdir('effectv', components: [plugins_component, component('effectv')])
subdir('equalizer', components: [plugins_component, component('equalizer')])
subdir('flv', components: [plugins_component, component('flv')])
subdir('flx', components: [plugins_component, component('flx')])
subdir('goom', components: [plugins_component, component('goom')])
subdir('goom2k1', components: [plugins_component, component('goom2k1')])
subdir('icydemux', components: [plugins_component, component('icydemux')])
subdir('id3demux', components: [plugins_component, component('id3demux')])
subdir('imagefreeze', components: [plugins_component, component('imagefreeze')])
subdir('interleave', components: [plugins_component, component('interleave')])
subdir('isomp4', components: [plugins_component, component('isomp4')])
subdir('law', components: [plugins_component, component('law')])
subdir('level', components: [plugins_component, component('level')])
subdir('matroska', components: [plugins_component, component('matroska')])
subdir('monoscope', components: [plugins_component, component('monoscope')])
subdir('multifile', components: [plugins_component, component('multifile')])
subdir('multipart', components: [plugins_component, component('multipart')])
subdir('replaygain', components: [plugins_component, component('replaygain')])
subdir('rtp', components: [plugins_component, component('rtp')])
subdir('rtpmanager', components: [plugins_component, component('rtpmanager')])
subdir('rtsp', components: [plugins_component, component('rtsp')])
subdir('shapewipe', components: [plugins_component, component('shapewipe')])
subdir('smpte', components: [plugins_component, component('smpte')])
subdir('spectrum', components: [plugins_component, component('spectrum')])
subdir('udp', components: [plugins_component, component('udp')])
subdir('videobox', components: [plugins_component, component('videobox')])
subdir('videocrop', components: [plugins_component, component('videocrop')])
subdir('videofilter', components: [plugins_component, component('videofilter')])
subdir('videomixer', components: [plugins_component, component('videomixer')])
subdir('wavenc', components: [plugins_component, component('wavenc')])
subdir('wavparse', components: [plugins_component, component('wavparse')])
subdir('y4m', components: [plugins_component, component('y4m')])
