subdir('directsound', components: [plugins_component])
subdir('oss4', components: [plugins_component])
subdir('oss', components: [plugins_component])
subdir('v4l2', components: [plugins_component])
subdir('ximage', components: [plugins_component])

# FIXME: Implement these
#subdir('osxaudio')
#subdir('osxvideo')
#subdir('waveform')
